// Contents:    feat: add .gitignore //  feat: add movies and reviews handlers correctly
